# spark-connect

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build_test_draft.yaml  release.yaml
examples/: databricks.rs
src/: error.rs  io.rs  lib.rs  session.rs  test_utils.rs
src/client/: builder.rs  error.rs  mod.rs
