[package]
edition = "2024"
authors = ["Francisco A. B. Sampaio <franciscoabsampaio@gmail.com>"]
name = "spark-connect"
version = "0.1.0"
description = "Rust client for Apache Spark Connect."
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/spark-connect"
repository = "https://github.com/franciscoabsampaio/spark-connect"
homepage = "https://github.com/franciscoabsampaio/spark-connect"
keywords = ["spark", "connect", "sql", "data", "client"]
categories = ["database", "api-bindings", "data-processing"]

[dependencies]
arrow = "56.2.0"
arrow-ipc = "56.2.0"
chrono = { version = "0.4.42", optional = true }
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
prost = "0.14.1"
prost-types = "0.14.1"
regex = "1.11.3"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.14.2", optional = true }
tonic-prost = "0.14.2"
tower = "0.5.2"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tokio-test = "0.4.4"

[features]
default = [
  "tonic/default",
]
chrono = [
    "chrono/default"
]
tls = [
  "tonic/tls-connect-info",
]

[profile.release]
codegen-units = 1 # Improves optimizations
lto = true
opt-level = "z"   # "z" for size, "3" for maximum performance
panic = "abort"   # Abort on panic instead of unwinding — smaller binaries and slightly faster
